--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,13 @@
     <string name="title_activity_main"></string>
     <string name="title_activity_doctor_dashboard">داشبورد دکتر</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="empty_fragment">درحال بروزرسانی</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="register_fragment_title"> ثبت درخواست برای بیمارستان</string>
     <string name="my_hospital_fragment_title">بیمارستان های من</string>
     <string name="doc_request_fragment_title">درج نوبت برای بیمارستان</string>
     <string name="get_turn_patient_fragment_title">ثبت نوبت برای بیمار</string>
+    <string name="calling_turn_fragment_title">فراخوانی نوبت</string>
 </resources>
